# rist

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  build-ninja.bat  build.bat  build.sh  sol2.cmake
b-ninja/: CMakeCache.txt
include/metas/: Member.h  Member.inl  Meta.h  Meta.inl
include/metas/detail/: MetaHolder.h  template_helpers.h  template_helpers.inl
modules/: sol2-config-version.cmake  sol2-config.cmake  sol2-targets.cmake
src/: CMakeLists.txt  EntityManager.cpp  MyApplication.cpp  MyApplication.h  ScriptManager.cpp  TestComponent.hpp  Types.hpp  configure.h.cmake  enemy.json  main.cpp  main.h  script.lua
src/data/: resources.conf  script.lua  tc.json
src/example/: JsonCast.h  JsonCast.inl  MovieInfo.h  Person.h  StringCast.cpp
test/: Directories.h  EntityManager.h  Test.cpp  Test.hpp  build.bat  build.sh  main  main.cpp  main.exe.stackdump  main2.cpp  main3.cpp  main4.cpp  two_things.hpp
